# lattice-boltzmann-simulator

./: .gitattributes  CMakeLists.txt  README.md  benchmarks.md
.cache/clangd/index/: cell.hpp.AC9AFFEFED77824B.idx  lbm.cpp.B3F1DE77D3333CD3.idx  lbm.hpp.2056AF8031EA2224.idx  lbm_c.hpp.6C853B7C1F7ACDD6.idx  main.cpp.3C1107B61EEB0D0B.idx  math_util.hpp.565A5AFE7F40F617.idx
collected_data/: benchmarks.md  benchmarks.txt  vectorized_info.txt  vectorized_info_after.txt
frameworks/glad/include/glad/: glad.h
frameworks/glad/src/: glad.c
include/: benchmark_simulation.hpp  cell.hpp  lbm.hpp  lbm_c.hpp  lbm_parallel.hpp  math_util.hpp  render_simulation.hpp  simulate_run.hpp
literature/: used_papers.txt
src/: benchmark_simulation.cpp  cell.cpp  lbm.cpp  lbm_parallel.cpp  main.cpp  render_simulation.cpp  simulate_run.cpp
